// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AtTag should render prop -- active 1`] = `
<view
  class="at-tag at-tag--normal at-tag--active"
>
  标签
</view>
`;

exports[`AtTag should render prop -- circle 1`] = `
<view
  class="at-tag at-tag--normal at-tag--circle"
>
  标签
</view>
`;

exports[`AtTag should render prop -- disabled 1`] = `
<view
  class="at-tag at-tag--normal at-tag--disabled"
>
  标签
</view>
`;

exports[`AtTag should render prop -- name 1`] = `
<view
  class="at-tag at-tag--normal"
>
  标签
</view>
`;

exports[`AtTag should render prop -- size 1`] = `
<view
  class="at-tag at-tag--small"
>
  标签
</view>
`;

exports[`AtTag should render prop -- type 1`] = `
<view
  class="at-tag at-tag--normal at-tag--primary"
>
  标签
</view>
`;
